In the HTML docs: add prefix to notes that need it

--- a/files/en-us/web/html/applying_color/index.html
+++ b/files/en-us/web/html/applying_color/index.html
@@ -312,7 +312,7 @@ th {
 }</pre>
 
 <div class="notecard note">
-<p>When you try to show it in Safari, it will not show properly. Because Safari doesn't support <code>text-decoration: underline wavy #88ff88</code>.</p>
+<p><strong>Note:</strong> When you try to show it in Safari, it will not show properly. Because Safari doesn't support <code>text-decoration: underline wavy #88ff88</code>.</p>
 </div>
 
 <p>Finally, the <code>.boxRight</code> class describes the unique properties of the box that's drawn on the right. It's configured to float the box to the right so that it appears next to the previous box. Then the following colors are established:</p>
@@ -338,7 +338,7 @@ th {
 <p>{{EmbedLiveSample("Example_Picking_a_color", 525, 275)}}</p>
 
 <div class="note">
-<p>On macOS, you indicate that you've finalized selection of the color by closing the color picker window.</p>
+<p><strong>Note:</strong> On macOS, you indicate that you've finalized selection of the color by closing the color picker window.</p>
 </div>
 
 <h4 id="HTML_2">HTML</h4>
@@ -406,7 +406,7 @@ colorPicker.addEventListener("change", function(event) {
 <p>When trying to decide upon a base color, you may find that browser extensions that let you select colors from web content can be particularly handy. Some of these are even specifically designed to help with this sort of work. For example, the website <a href="http://www.colorzilla.com/">ColorZilla</a> offers an extension (<a href="http://www.colorzilla.com/chrome">Chrome</a> / <a href="http://www.colorzilla.com/firefox">Firefox</a>) that offers an eyedropper tool for picking colors from the web. It can also take averages of the colors of pixels in various sized areas or even a selected area of the page.</p>
 
 <div class="note">
-<p>The advantage to averaging colors can be that often what looks like a solid color is actually a surprisingly varied number of related colors all used in concert, blending to create a desired effect. Picking just one of these pixels can result in getting a color that on its own looks very out of place.</p>
+<p><strong>Note:</strong> The advantage to averaging colors can be that often what looks like a solid color is actually a surprisingly varied number of related colors all used in concert, blending to create a desired effect. Picking just one of these pixels can result in getting a color that on its own looks very out of place.</p>
 </div>
 
 <h4 id="Fleshing_out_the_palette">Fleshing out the palette</h4>
@@ -424,7 +424,7 @@ colorPicker.addEventListener("change", function(event) {
 <p>When designing your palette, be sure to keep in mind that in addition to the colors these tools typically generate, you'll probably also need to add some core neutral colors such as white (or nearly white), black (or nearly black), and some number of shades of gray.</p>
 
 <div class="note">
-<p>Usually, you are far better off using the smallest number of colors possible. By using color to accentuate rather than adding color to everything on the page, you keep your content easy to read and the colors you do use have far more impact.</p>
+<p><strong>Note:</strong> Usually, you are far better off using the smallest number of colors possible. By using color to accentuate rather than adding color to everything on the page, you keep your content easy to read and the colors you do use have far more impact.</p>
 </div>
 
 <h3 id="Color_theory_resources">Color theory resources</h3>
@@ -445,7 +445,7 @@ colorPicker.addEventListener("change", function(event) {
 <p>You should do at least basic research into {{interwiki("wikipedia", "color blindness")}}. There are several kinds; the most common is red-green color blindness, which causes people to be unable to differentiate between the colors red and green. There are others, too, ranging from inabilities to tell the difference between certain colors to total inability to see color at all.</p>
 
 <div class="note">
-<p>The most important rule: never use color as the only way to know something. If, for example, you indicate success or failure of an operation by changing the color of a shape from white to green for success and red for failure, users with red-green color-blindness won't be able to use your site properly. Instead, perhaps use both text and color together, so that everyone can understand what's happening.</p>
+<p><strong>Note:</strong> The most important rule: never use color as the only way to know something. If, for example, you indicate success or failure of an operation by changing the color of a shape from white to green for success and red for failure, users with red-green color-blindness won't be able to use your site properly. Instead, perhaps use both text and color together, so that everyone can understand what's happening.</p>
 </div>
 
 <p>For more information about color blindness, see the following articles:</p>
