--- a/files/en-us/web/html/block-level_elements/index.html
+++ b/files/en-us/web/html/block-level_elements/index.html
@@ -16,7 +16,7 @@ tags:
 <p>Browsers typically display the block-level element with a newline both before and after the element. You can visualize them as a stack of boxes.</p>
 
 <div class="note">
-<p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).</p>
+<p><strong>Note:</strong> A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).</p>
 </div>
 
 <p>The following example demonstrates the block-level element's influence:</p>
