--- a/files/en-us/web/html/element/dfn/index.html
+++ b/files/en-us/web/html/element/dfn/index.html
@@ -73,7 +73,7 @@ browser-compat: html.elements.dfn
 </ol>
 
 <div class="note">
-<p>If the <code>&lt;dfn&gt;</code> element has a <code>title</code> attribute, it <em>must</em> contain the term being defined and no other text.</p>
+<p><strong>Note:</strong> If the <code>&lt;dfn&gt;</code> element has a <code>title</code> attribute, it <em>must</em> contain the term being defined and no other text.</p>
 </div>
 
 <h3>Links to <code>&lt;dfn&gt;</code> elements</h3>
