--- a/files/en-us/web/html/element/hgroup/index.html
+++ b/files/en-us/web/html/element/hgroup/index.html
@@ -15,7 +15,7 @@ browser-compat: html.elements.hgroup
 
 <div class="notecard warning">
   <h4>Warning</h4>
-  <p><code>&lt;hgroup&gt;</code> should not be used because no assistive technology supports it, and as a result it has a detrimental effect on assistance for headings placed within it.</p>
+  <p><strong>Note:</strong> <code>&lt;hgroup&gt;</code> should not be used because no assistive technology supports it, and as a result it has a detrimental effect on assistance for headings placed within it.</p>
   <p>For more information see the <a href="#usage_notes">Usage notes below</a>.</p>
 </div>
 
@@ -63,7 +63,7 @@ browser-compat: html.elements.hgroup
 <h2 id="Usage_notes">Usage notes</h2>
 
 <div class="note">
-<p>The <code>&lt;hgroup&gt;</code> element has been removed from the HTML5 (W3C) specification, but it still is in the WHATWG version of HTML. It is partially implemented in most browsers, though, so is unlikely to go away.<br>
+<p><strong>Note:</strong> The <code>&lt;hgroup&gt;</code> element has been removed from the HTML5 (W3C) specification, but it still is in the WHATWG version of HTML. It is partially implemented in most browsers, though, so is unlikely to go away.<br>
  However, given that a key purpose of the <code>&lt;hgroup&gt;</code> element is to affect how headings are displayed by <a href="/en-US/docs/Web/HTML/Element/Heading_Elements#the_html5_outline_algorithm">the outline algorithm defined in the HTML specification</a>—but <strong>the HTML outline algorithm is not implemented in any browsers</strong>—then the <code>&lt;hgroup&gt;</code> semantics are in practice only theoretical.<br>
  So the HTML5 (W3C) specification provides advice on how to mark up <a href="https://www.w3.org/TR/html52/common-idioms-without-dedicated-elements.html#common-idioms-without-dedicated-elements">Subheadings, subtitles, alternative titles and taglines</a> without using <code>&lt;hgroup&gt;</code>.</p>
 </div>
