--- a/files/en-us/web/html/element/input/datetime/index.html
+++ b/files/en-us/web/html/element/input/datetime/index.html
@@ -23,7 +23,7 @@ tags:
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
 <div class="notecard note">
-<p>This feature has no current browser implementations.</p>
+<p><strong>Note:</strong> This feature has no current browser implementations.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
