--- a/files/en-us/web/html/element/input/reset/index.html
+++ b/files/en-us/web/html/element/input/reset/index.html
@@ -22,7 +22,7 @@ browser-compat: html.elements.input.input-reset
 <div>{{EmbedInteractiveExample("pages/tabbed/input-reset.html", "tabbed-standard")}}</div>
 
 <div class="note">
-<p>You should usually avoid including reset buttons in your forms. They're rarely useful, and are instead more likely to frustrate users who click them by mistake (often while trying to click the <a href="/en-US/docs/Web/HTML/Element/input/submit">submit button</a>).</p>
+<p><strong>Note:</strong> You should usually avoid including reset buttons in your forms. They're rarely useful, and are instead more likely to frustrate users who click them by mistake (often while trying to click the <a href="/en-US/docs/Web/HTML/Element/input/submit">submit button</a>).</p>
 </div>
 
 <table class="properties">
