--- a/files/en-us/web/html/element/input/search/index.html
+++ b/files/en-us/web/html/element/input/search/index.html
@@ -183,7 +183,7 @@ browser-compat: html.elements.input.input-search
 <p><code>q</code> is the most common <code>name</code> given to search inputs, although it's not mandatory. When submitted, the data name/value pair sent to the server will be <code>q=searchterm</code>.</p>
 
 <div class="note">
-<p>You must remember to set a {{htmlattrxref("name", "input")}} for your input, otherwise nothing will be submitted.</p>
+<p><strong>Note:</strong> You must remember to set a {{htmlattrxref("name", "input")}} for your input, otherwise nothing will be submitted.</p>
 </div>
 
 <h3 id="Differences_between_search_and_text_types">Differences between search and text types</h3>
