--- a/files/en-us/web/html/element/kbd/index.html
+++ b/files/en-us/web/html/element/kbd/index.html
@@ -73,7 +73,7 @@ browser-compat: html.elements.kbd
 </ul>
 
 <div class="note">
-<p>You can define a custom style to override the browser's default font selection for the <code>&lt;kbd&gt;</code> element, although the user's preferences may potentially override your CSS.</p>
+<p><strong>Note:</strong> You can define a custom style to override the browser's default font selection for the <code>&lt;kbd&gt;</code> element, although the user's preferences may potentially override your CSS.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
@@ -104,7 +104,7 @@ for the command "mycommand".&lt;/p&gt;
 <div class="notecard note">
 <p><strong>Note:</strong> You don't need to do all this wrapping; you can choose to simplify it by leaving out the external <code>&lt;kbd&gt;</code> element. In other words, simplifying this to just <code>&lt;kbd&gt;Ctrl&lt;/kbd&gt;+&lt;kbd&gt;N&lt;/kbd&gt;</code> would be perfectly valid.</p>
 
-<p>Depending on your style sheet, though, you may find it useful to do this kind of nesting.</p>
+<p><strong>Note:</strong> Depending on your style sheet, though, you may find it useful to do this kind of nesting.</p>
 </div>
 
 <h5 id="Result">Result</h5>
