--- a/files/en-us/web/html/element/mark/index.html
+++ b/files/en-us/web/html/element/mark/index.html
@@ -68,7 +68,7 @@ browser-compat: html.elements.mark
 </ul>
 
 <div class="note">
-<p>Don't confuse <code>&lt;mark&gt;</code> with the {{HTMLElement("strong")}} element; <code>&lt;mark&gt;</code> is used to denote content which has a degree of <em>relevance</em>, while <code>&lt;strong&gt;</code> indicates spans of text of <em>importance</em>.</p>
+<p><strong>Note:</strong> Don't confuse <code>&lt;mark&gt;</code> with the {{HTMLElement("strong")}} element; <code>&lt;mark&gt;</code> is used to denote content which has a degree of <em>relevance</em>, while <code>&lt;strong&gt;</code> indicates spans of text of <em>importance</em>.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
