--- a/files/en-us/web/html/element/style/index.html
+++ b/files/en-us/web/html/element/style/index.html
@@ -46,7 +46,7 @@ browser-compat: html.elements.style
  <p>This attribute specifies that the styles only apply to the elements of its parent(s) and children.</p>
 
  <div class="note">
- <p>This attribute may be re-introduced in the future per <a href="https://github.com/w3c/csswg-drafts/issues/3547">https://github.com/w3c/csswg-drafts/issues/3547</a>. If you want to use the attribute now, you can use a <a href="https://github.com/samthor/scoped">polyfill</a>.</p>
+ <p><strong>Note:</strong> This attribute may be re-introduced in the future per <a href="https://github.com/w3c/csswg-drafts/issues/3547">https://github.com/w3c/csswg-drafts/issues/3547</a>. If you want to use the attribute now, you can use a <a href="https://github.com/samthor/scoped">polyfill</a>.</p>
  </div>
  </dd>
 </dl>
