--- a/files/en-us/web/html/element/tt/index.html
+++ b/files/en-us/web/html/element/tt/index.html
@@ -100,7 +100,7 @@ The telnet client should display: &lt;tt&gt;Local Echo is on&lt;/tt&gt;&lt;/p&gt
 <p>The <code>&lt;tt&gt;</code> element is, by default, rendered using the browser's default non-proportional font. You can override this using CSS by creating a rule using the <code>tt</code> selector, as seen in the example {{anch("Overriding the default font")}} above.</p>
 
 <div class="note">
-<p>User-configured changes to the default monospace font setting may take precedence over your CSS.</p>
+<p><strong>Note:</strong> User-configured changes to the default monospace font setting may take precedence over your CSS.</p>
 </div>
 
 <p>Although this element wasn't officially deprecated in HTML 4.01, its use was discouraged in favor of the semantic elements and/or CSS. The <code>&lt;tt&gt;</code> element is obsolete in HTML 5.</p>
