--- a/files/en-us/web/html/inline_elements/index.html
+++ b/files/en-us/web/html/inline_elements/index.html
@@ -17,7 +17,7 @@ tags:
 <p>Inline elements are those which only occupy the space bounded by the tags defining the element, instead of breaking the flow of the content.</p>
 
 <div class="note">
-<p>An inline element does not start on a new line and only takes up as much width as necessary.</p>
+<p><strong>Note:</strong> An inline element does not start on a new line and only takes up as much width as necessary.</p>
 </div>
 
 <h2 id="Inline_vs._block-level_elements_a_demonstration">Inline vs. block-level elements: a demonstration</h2>
