--- a/files/en-us/web/html/attributes/autocomplete/index.html
+++ b/files/en-us/web/html/attributes/autocomplete/index.html
@@ -31,7 +31,7 @@ tags:
 <p>For more information, see the {{htmlattrxref("autocomplete", "form")}} attribute in {{HTMLElement("form")}}.</p>
 
 <div class="notecard note">
-<p>In order to provide autocompletion, user-agents might require <code>&lt;input&gt;</code>/<code>&lt;select&gt;</code>/<code>&lt;textarea&gt;</code> elements to:</p>
+<p><strong>Note:</strong> In order to provide autocompletion, user-agents might require <code>&lt;input&gt;</code>/<code>&lt;select&gt;</code>/<code>&lt;textarea&gt;</code> elements to:</p>
 
 <ol>
 	<li>Have a <code>name</code> and/or <code>id</code> attribute</li>
