--- a/files/en-us/web/html/attributes/crossorigin/index.html
+++ b/files/en-us/web/html/attributes/crossorigin/index.html
@@ -44,7 +44,7 @@ tags:
 <p>An invalid keyword and an empty string will be handled as the <code>anonymous</code> keyword.</p>
 
 <div class="notecard note">
-<p>Prior to Firefox 83 the <code>crossorigin</code> attribute was not supported for <code>rel="icon"</code> there is also <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=1121645">an open issue for Chrome</a>.</p>
+<p><strong>Note:</strong> Prior to Firefox 83 the <code>crossorigin</code> attribute was not supported for <code>rel="icon"</code> there is also <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=1121645">an open issue for Chrome</a>.</p>
 </div>
 
 <h3 id="Example_crossorigin_with_the_script_element">Example: crossorigin with the script element</h3>
