--- a/files/en-us/web/html/element/heading_elements/index.html
+++ b/files/en-us/web/html/element/heading_elements/index.html
@@ -53,7 +53,7 @@ browser-compat: html.elements.h1
 <p>These elements only include the <a href="/en-US/docs/Web/HTML/Global_attributes">global attributes</a>.</p>
 
 <div class="note">
-<p>The <code>align</code> attribute is obsolete; don't use it.</p>
+<p><strong>Note:</strong> The <code>align</code> attribute is obsolete; don't use it.</p>
 </div>
 
 <h2 id="Usage_notes">Usage notes</h2>
