--- a/files/en-us/web/html/element/noembed/index.html
+++ b/files/en-us/web/html/element/noembed/index.html
@@ -17,7 +17,7 @@ browser-compat: html.elements.noembed
 <p>The <strong><code>&lt;noembed&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is an obsolete, non-standard way to provide alternative, or "fallback", content for browsers that do not support the {{HTMLElement("embed")}} element or do not support the type of <a href="/en-US/docs/Web/Guide/HTML/Content_categories#embedded_content">embedded content</a> an author wishes to use. This element was deprecated in HTML 4.01 and above in favor of placing fallback content between the opening and closing tags of an {{HTMLElement("object")}} element.</p>
 
 <div class="note">
-<p>While this element currently still works in many browsers, it is obsolete and should not be used. Use {{HTMLElement("object")}} instead, with fallback content between the opening and closing tags of the element.</p>
+<p><strong>Note:</strong> While this element currently still works in many browsers, it is obsolete and should not be used. Use {{HTMLElement("object")}} instead, with fallback content between the opening and closing tags of the element.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
