--- a/files/en-us/web/html/global_attributes/tabindex/index.html
+++ b/files/en-us/web/html/global_attributes/tabindex/index.html
@@ -19,7 +19,7 @@ browser-compat: html.global_attributes.tabindex
  <li>A <em>negative value</em> (usually <code>tabindex="-1"</code>) means that the element is not reachable via sequential keyboard navigation, but could be focused with JavaScript or visually by clicking with the mouse. It's mostly useful to create accessible widgets with JavaScript.
 
   <div class="note">
-  <p>A negative value is useful when you have off-screen content that appears on a specific event. The user won't be able to focus any element with a negative <code>tabindex</code> using the keyboard, but a script can do so by calling the <code>focus()</code> <a href="/en-US/docs/Web/API/HTMLElement/focus">method</a>.</p>
+  <p><strong>Note:</strong> A negative value is useful when you have off-screen content that appears on a specific event. The user won't be able to focus any element with a negative <code>tabindex</code> using the keyboard, but a script can do so by calling the <code>focus()</code> <a href="/en-US/docs/Web/API/HTMLElement/focus">method</a>.</p>
   </div>
  </li>
  <li><code>tabindex="0"</code> means that the element should be focusable in sequential keyboard navigation, after any positive tabindex values and its order is defined by the document's source order.</li>
