--- a/files/en-us/web/html/global_attributes/x-ms-format-detection/index.html
+++ b/files/en-us/web/html/global_attributes/x-ms-format-detection/index.html
@@ -16,7 +16,7 @@ tags:
 <p>Existing links, such as ones with the <code>tel:</code> scheme, are unaffected.</p>
 
 <div class="notecard note">
-<p>Links created through format detection do not appear in the DOM.</p>
+<p><strong>Note:</strong> Links created through format detection do not appear in the DOM.</p>
 </div>
 
 <p>{{Non-standard_inline}} This proprietary property is specific to Internet Explorer and Microsoft Edge.</p>
