--- a/files/en-us/web/html/global_attributes/dir/index.html
+++ b/files/en-us/web/html/global_attributes/dir/index.html
@@ -23,7 +23,7 @@ browser-compat: html.global_attributes.dir
 </ul>
 
 <div class="note">
-<p><strong>Note:</strong> <strong>Usage notes:</strong> This attribute is mandatory for the {{ HTMLElement("bdo") }} element where it has a different semantic meaning.</p>
+<p><strong>Note:</strong> This attribute is mandatory for the {{ HTMLElement("bdo") }} element where it has a different semantic meaning.</p>
 
 <ul>
  <li>
