Fix a few more stragglers

--- a/files/en-us/web/html/element/hgroup/index.html
+++ b/files/en-us/web/html/element/hgroup/index.html
@@ -14,8 +14,7 @@ browser-compat: html.elements.hgroup
 <div>{{HTMLRef}}</div>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p><strong>Note:</strong> <code>&lt;hgroup&gt;</code> should not be used because no assistive technology supports it, and as a result it has a detrimental effect on assistance for headings placed within it.</p>
+  <p><strong>Warning:</strong> <code>&lt;hgroup&gt;</code> should not be used because no assistive technology supports it, and as a result it has a detrimental effect on assistance for headings placed within it.</p>
   <p>For more information see the <a href="#usage_notes">Usage notes below</a>.</p>
 </div>
 
