HTML docs: fix notes that use heading style

--- a/files/en-us/web/html/element/area/index.html
+++ b/files/en-us/web/html/element/area/index.html
@@ -106,8 +106,7 @@ browser-compat: html.elements.area
  </ul>
  <p>Use this attribute only if the {{htmlattrxref("href", "area")}} attribute is present.</p>
  <div class="notecard note">
- <h4>Note</h4>
- <p>Setting <code>target="_blank"</code> on <code>&lt;area&gt;</code> elements implicitly provides the same <code>rel</code> behavior as setting <code><a href="/en-US/docs/Web/HTML/Link_types/noopener">rel="noopener"</a></code> which does not set <code>window.opener</code>. See <a href="#browser_compatibility">browser compatibility</a> for support status.</p>
+ <p><strong>Note:</strong> Setting <code>target="_blank"</code> on <code>&lt;area&gt;</code> elements implicitly provides the same <code>rel</code> behavior as setting <code><a href="/en-US/docs/Web/HTML/Link_types/noopener">rel="noopener"</a></code> which does not set <code>window.opener</code>. See <a href="#browser_compatibility">browser compatibility</a> for support status.</p>
  </div>
  </dd>
 </dl>
@@ -120,8 +119,7 @@ browser-compat: html.elements.area
  <dt>{{htmlattrdef("nohref")}} {{deprecated_inline}}</dt>
  <dd>Indicates that no hyperlink exists for the associated area.
  <div class="notecard note">
- <h4>Note</h4>
- <p>Since HTML5, omitting the <code>href</code> attribute is sufficient.</p>
+ <p><strong>Note:</strong> Since HTML5, omitting the <code>href</code> attribute is sufficient.</p>
  </div>
  </dd>
  <dt>{{htmlattrdef("type")}} {{deprecated_inline}}</dt>
