--- a/files/en-us/web/html/element/index.html
+++ b/files/en-us/web/html/element/index.html
@@ -16,8 +16,7 @@ tags:
 <p>They are grouped by function to help you find what you have in mind easily. An alphabetical list of all elements is provided in the sidebar on every element's page as well as this one.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>For more information about the basics of HTML elements and attributes, see <a href="/en-US/docs/Learn/HTML/Introduction_to_HTML#elements_%e2%80%94_the_basic_building_blocks">the section on elements in the Introduction to HTML article</a>.</p>
+  <p><strong>Note:</strong> For more information about the basics of HTML elements and attributes, see <a href="/en-US/docs/Learn/HTML/Introduction_to_HTML#elements_%e2%80%94_the_basic_building_blocks">the section on elements in the Introduction to HTML article</a>.</p>
 </div>
 
 <h2 id="Main_root">Main root</h2>
