--- a/files/en-us/web/html/element/optgroup/index.html
+++ b/files/en-us/web/html/element/optgroup/index.html
@@ -50,8 +50,7 @@ browser-compat: html.elements.optgroup
 </table>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Optgroup elements may not be nested.</p>
+  <p><strong>Note:</strong> Optgroup elements may not be nested.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
