--- a/files/en-us/web/html/link_types/noopener/index.html
+++ b/files/en-us/web/html/link_types/noopener/index.html
@@ -15,8 +15,7 @@ browser-compat: html.elements.a.rel.noopener
 <p>Note that when <code>noopener</code> is used, nonempty target names other than <code>_top</code>, <code>_self</code>, and <code>_parent</code> are all treated like <code>_blank</code> in terms of deciding whether to open a new window/tab.</p>
 
 <div class="notecard note">
- <h4>Note</h4>
- <p>Setting <code>target="_blank"</code> on <code>&lt;a&gt;</code> elements now implicitly provides the same <code>rel</code> behavior as setting <code>rel="noopener"</code> which does not set <code>window.opener</code>. See <a href="/en-US/docs/Web/HTML/Element/a#browser_compatibility">browser compatibility</a> for support status.</p>
+ <p><strong>Note:</strong> Setting <code>target="_blank"</code> on <code>&lt;a&gt;</code> elements now implicitly provides the same <code>rel</code> behavior as setting <code>rel="noopener"</code> which does not set <code>window.opener</code>. See <a href="/en-US/docs/Web/HTML/Element/a#browser_compatibility">browser compatibility</a> for support status.</p>
 </div>
 
 <h2 id="Specifications">Specifications</h2>
