--- a/files/en-us/web/html/element/audio/index.html
+++ b/files/en-us/web/html/element/audio/index.html
@@ -71,6 +71,7 @@ browser-compat: html.elements.audio
  <p>The default value is different for each browser. The spec advises it to be set to <code>metadata</code>.</p>
 
  <div class="notecard note">
+   <p><strong>Note:</strong></p>
    <ul>
      <li>The <code>autoplay</code> attribute has precedence over <code>preload</code>. If <code>autoplay</code> is specified, the browser would obviously need to start downloading the audio for playback.</li>
      <li>The browser is not forced by the specification to follow the value of this attribute; it is a mere hint.</li>
