--- a/files/en-us/web/html/element/video/index.html
+++ b/files/en-us/web/html/element/video/index.html
@@ -92,6 +92,7 @@ browser-compat: html.elements.video
  <p>The default value is different for each browser. The spec advises it to be set to <code>metadata</code>.</p>
 
  <div class="notecard note">
+   <p><strong>Note:</strong></p>
    <ul>
        <li>The <code>autoplay</code> attribute has precedence over <code>preload</code>. If <code>autoplay</code> is specified, the browser would obviously need to start downloading the video for playback.</li>
        <li>The specification does not force the browser to follow the value of this attribute; it is a mere hint.</li>
